fix: add blur behind mobile navbar!

--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -113,7 +113,10 @@
     flex-direction: column;
 
     background: url("../../assets/bgWhite.png");
-    background-color: var(--white-color);
+    // background: rgba(234, 234, 234, 0.25);
+    backdrop-filter: blur(4px);
+    // -webkit-backdrop-filter: blur(4px);
+    background-color: rgba(255, 255, 255, 0.947);
     background-size: cover;
     background-repeat: repeat-x;
 
